# example-vertex-ai-pipelines

./: .envrc  err.txt  image_classif_pipeline.json  main.py  pyproject.toml  readme.md
